--- a/awp/pom.xml
+++ b/awp/pom.xml
@@ -47,6 +47,11 @@
                 </configuration>
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+        </resources>
     </build>
 
     <parent>
